# tensorflow_cpp_object_detection_web_server

./: CMakeLists.txt  README.md  detect.cpp  detect.h  main.cpp  test_cpp_api.py
